Remove totalSize from recipe, use amount
